--- a/src/docs/elements/media.mdx
+++ b/src/docs/elements/media.mdx
@@ -76,5 +76,5 @@ For this purpose, we have some utility named:
 ```
 
 <Notification type="info">
-Please note that you must explicitly enable this using the <a href="/docs/customization/settings#utilities">utilities</a> switch under the $settings map.
+Please note that you must explicitly enable this using the <a href="/docs/customization/settings#utilities">utilities</a> switch under the <code>$settings</code> map.
 </Notification>
