Update .form-check code

--- a/src/docs/elements/forms.mdx
+++ b/src/docs/elements/forms.mdx
@@ -170,16 +170,20 @@ Adding the `form-group--vertical-check` modifier class to the `form-group` eleme
   <legend>Which one of you like?</legend>
   <div class="form-group form-group--vertical-check">
     <label class="form-check">
-      <input class="form-check__control" type="checkbox" value="own" name="property-ownership2"/><span class="form-label form-check__label">Own</span>
+      <input class="form-check__control" type="checkbox" value="own" name="property-ownership2"/>
+      <span class="form-label form-check__label">Own</span>
     </label>
     <label class="form-check">
-      <input class="form-check__control" type="checkbox" value="rent" name="property-ownership2" disabled="disabled"/><span class="form-label form-check__label">Rent</span>
+      <input class="form-check__control" type="checkbox" value="rent" name="property-ownership2" disabled="disabled"/>
+      <span class="form-label form-check__label">Rent</span>
     </label>
     <label class="form-check">
-      <input class="form-check__control" type="checkbox" value="misc" name="property-ownership2"/><span class="form-label form-check__label">Misc</span>
+      <input class="form-check__control" type="checkbox" value="misc" name="property-ownership2"/>
+      <span class="form-label form-check__label">Misc</span>
     </label>
     <label class="form-check">
-      <input class="form-check__control" id="indeterminate" type="checkbox" value="misc" name="property-ownership2"/><span class="form-label form-check__label">Indeterminate</span>
+      <input class="form-check__control" id="indeterminate" type="checkbox" value="misc" name="property-ownership2"/>
+      <span class="form-label form-check__label">Indeterminate</span>
     </label>
   </div>
 </fieldset>
