Add transition function

--- a/src/docs/sass/functions.mdx
+++ b/src/docs/sass/functions.mdx
@@ -60,6 +60,10 @@ Get a value from the `$font-sizes` map by key name. By default, the function giv
 }
 ```
 
+## transition
+
+[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/function/_transition.scss)
+
 ## responsive-font-size
 
 It is hard to get generic font sizes that we can use throughout a whole project. Usually, we need unique ones. For this, we can set fluid declaration, similar to the `font-size()` function.
