Unify @use imports

--- a/src/docs/elements/buttons.mdx
+++ b/src/docs/elements/buttons.mdx
@@ -168,7 +168,7 @@ You can create new button color variants using the `btn-variant` mixin. First, y
 
 ```scss
 // You have to specify the additional colors at the very first import of Spruce.
-@use 'sprucecss/scss/spruce' with (
+@use '~sprucecss/scss/spruce' with (
   $colors: (
     btn: (
       ternary-background: hsl(247, 65%, 49%),
