--- a/src/docs/elements/generators.mdx
+++ b/src/docs/elements/generators.mdx
@@ -19,7 +19,7 @@ The goal is to separate other Spruce CSS functionality from the style generation
 
 ## generate-color-variables
 
-Using `generate-color-variables()`, we can generate our CSS variables from a map object everywhere we want. You can find [an example in the core](https://github.com/conedevelopment/sprucecss/blob/main/scss/_root.scss#L7).
+Using `generate-color-variables`, we can generate our CSS variables from a map object everywhere we want. You can find [an example in the core](https://github.com/conedevelopment/sprucecss/blob/main/scss/_root.scss#L7).
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_color.scss#L4)
 
