--- a/src/docs/getting-started/accessibility.mdx
+++ b/src/docs/getting-started/accessibility.mdx
@@ -16,5 +16,5 @@ Our primary reference is the [Web Content Accessibility Guidelines 2.1](https://
 We will meet the following accessibility-related issues:
 
 - The base colors and the base combinations will complete the color contrast guides.
-- We respect the user settings through `prefers-reduced-motion` and `prefers-color-scheme` (dark-mode is coming soon).
+- We respect the user settings through `prefers-reduced-motion` and `prefers-color-scheme`.
 - We care about semantics and will try to present the code examples more meaningfully.
