Add dark mode page content

--- a/src/docs/customization/settings.mdx
+++ b/src/docs/customization/settings.mdx
@@ -7,7 +7,7 @@ order: 9
 
 You can access any setting with the [setting() helper function](/docs/sass/functions#setting). Below, you can see the `$settings` object with its default values.
 
-[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/variable/_index.scss#L6)
+[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/config/_setting.scss)
 
 ```scss
 $settings: (
@@ -49,7 +49,7 @@ Turn on the color fallback:
 
 ## hyphens
 
-By default Spruce uses a simple hyphenation setup [which you can find here](https://github.com/conedevelopment/sprucecss/blob/main/scss/_typography.scss#L12).
+By default Spruce uses a simple hyphenation setup [which you can find here](https://github.com/conedevelopment/sprucecss/blob/main/scss/element/_typography.scss#L13).
 
 
 Turn off the hyphenation:
