--- a/src/docs/customization/themes.mdx
+++ b/src/docs/customization/themes.mdx
@@ -15,7 +15,7 @@ Our method usually adds a `data-theme-mode` attribute on the HTML element and do
 <html lang="en" data-theme-mode="dark">
 ```
 
-## Set up a Dark Theme Mode
+## Set Up a Dark Colors
 
 Setting up any theme mode is simple but can be tricky and complicated because of the many values (from the `$colors` map). For redeclaring dark mode, we have a predefined empty `$dark-colors` map which you can use when importing Spruce (but you can use any object you like).
 
