Update clear-list mixin

--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -427,7 +427,17 @@ code {
 
 ### clear-list
 
+Remove the `list-style`, `margin`, and `padding` stylings from the element.
+
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_utilities.scss#L77)
+
+#### Example(s)
+
+```scss
+ul {
+  @include clear-list;
+}
+```
 
 ### a11y-card-link
 
