Update clear-btn mixin

--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -423,7 +423,18 @@ code {
 
 ### clear-btn
 
+Clear the default browser button styles.
+
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_utilities.scss#L66)
+
+
+#### Example(s)
+
+```scss
+.remove-button-styles {
+  @include clear-btn;
+}
+```
 
 ### clear-list
 
