Update word-wrap mixin

--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -481,4 +481,15 @@ Create better card component linking by only using the title’s link (and not t
 
 ### word-wrap
 
+Break long strings of text.
+
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_utilities.scss#L105)
+
+#### Example(s)
+
+```scss
+.break-long-url {
+  @include spruce.word-wrap;
+}
+
+```
